# telebot-rag

./: .gitignore  bot.py  pyproject.toml
rag_module/: chain.py  config.py  prompts.py
